fix(css): checkbox responsiveness on mobile

--- a/dev/public/styles.css
+++ b/dev/public/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import url('./modern-normalize.min.css');
+@import url("./modern-normalize.min.css");
 
-@import url('../node_modules/nouislider/dist/nouislider.min.css');
+@import url("../node_modules/nouislider/dist/nouislider.min.css");
 
 :root {
 	line-height: 1.5;
@@ -43,11 +43,9 @@ img {
 
 /* NORMALIZE CSS END */
 
-
-
 body {
 	color: white;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Roboto", sans-serif;
 	--base-small-font: clamp(0.6rem, 1.5vw + 0.15rem, 1rem);
 	--base-big-font: clamp(1rem, 3vw + 0.6rem, 2rem);
 	--base-tiny-font: clamp(0.4rem, 1vw + 0.075rem, 0.5rem);
@@ -68,12 +66,9 @@ fieldset {
 	border: 2px solid #f5c518;
 }
 
-
-
 #page-container {
 	display: flex;
 	justify-content: center;
-
 }
 
 #form-container {
@@ -94,8 +89,6 @@ fieldset {
 	transition: opacity 1s;
 }
 
-
-
 .checkbox-button {
 	padding: 0.3rem;
 	border: 0.05rem solid #f5c518;
@@ -113,16 +106,17 @@ fieldset {
 	cursor: pointer;
 }
 
-.checkbox-button:hover {
-	background-color: #7a7676;
+@media (hover: hover) {
+	.checkbox-button:hover {
+		background-color: #7a7676;
+	}
 }
 
 .checkbox-button:has(> input:checked) {
 	background-color: #7a7676;
 }
 
-
-input[type=checkbox] {
+input[type="checkbox"] {
 	display: none;
 }
 
@@ -145,7 +139,7 @@ input[type=checkbox] {
 	}
 }
 
-#content-type-container>.checkbox-button {
+#content-type-container > .checkbox-button {
 	font-weight: 500;
 	padding: 0.3rem;
 }
@@ -163,17 +157,15 @@ input[type=checkbox] {
 	}
 }
 
-#genre-container>.checkbox-button {
+#genre-container > .checkbox-button {
 	padding: 0.1rem;
 }
-
 
 #rating-slider-container {
 	margin-top: 2rem;
 	align-self: center;
 	width: 70%;
 }
-
 
 #footer-flex {
 	display: flex;
@@ -231,11 +223,11 @@ input[type=checkbox] {
 }
 
 #settings-button {
-	background-image: url('./settings.svg');
+	background-image: url("./settings.svg");
 }
 
 #home-button {
-	background-image: url('./home.svg');
+	background-image: url("./home.svg");
 	align-self: flex-start;
 	margin: 0;
 }
@@ -268,7 +260,7 @@ input[type=checkbox] {
 	gap: 1rem;
 }
 
-#settings-body>fieldset {
+#settings-body > fieldset {
 	width: 95%;
 	display: flex;
 	justify-content: center;
@@ -290,7 +282,6 @@ input[type=checkbox] {
 	padding-top: 2rem;
 	padding-bottom: 0.5rem;
 	width: 90%;
-
 }
 
 #title-container {
